--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <p>Hello World</p>
+        <p>
+            Learn Enough to Be Dangerous is a leader in the movement to teach
+            <em>technical sophistication</em>, the seemingly magical ability to take
+            command of your computer and get it to do your bidding. This includes
+            everything from command lines and coding to guessing keyboard shortcuts,
+            <strong><em>GOOGLE</em></strong>Googling error messages, and knowing when to just reboot the darn thing.
+            We believe there are at least a billion people who can benefit from
+            learning technical sophistication, probably more. To join our
+            movement, sign up for our official email list now.
+        </p>
+        <h1>The Story</h1>
+        <h2>Background</h2>
+        <h2>Founders</h2>
+        <h3>Dante</h3>
+        <h3>Paula</h3>
+        <h3>Sampson</h3>
+        <h4>h4</h4>
+        <h5>h5</h5>
+        <h6>h6</h6>
+        <h7>h7</h7>
+        <a href="https://google.com">google.com</a>
+        <img src="images/kitten.jpg" alt="An adorable kitten">
     </body>
 </html>
