Add twitter and kitten images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <img src="images/twitter.png" alt="An adorable twitter logo">
         <p>
             Learn Enough to Be Dangerous is a leader in the movement to teach
             <em>technical sophistication</em>, the seemingly magical ability to take
@@ -27,5 +28,7 @@
         <h7>h7</h7>
         <a href="https://google.com">google.com</a>
         <img src="images/kitten.jpg" alt="An adorable kitten">
+        <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150"
+     alt="Nick Merwin">
     </body>
 </html>
